<resources>
    <string name="app_name">Asteroids info</string>


    <string name="btnRegister">Register</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnEnviar">Enviar</string>

    <string name="txtname">Nombre</string>
    <string name="txtusername">Username</string>
    <string name="txtlastName">Apellido</string>
    <string name="txtemail">Email</string>
    <string name="password">Password: Ejem1234</string>


    <string name="txtdistance">Distancia de la tierra</string>
    <string name="txtspeed">Velocidad de vuelo</string>
    <string name="txttem">prueba</string>





    <string name="login">LOGIN</string>
    <string name="titleLogin">Login</string>
    <string name="txttitle">Bienvenido</string>
    <string name="txttitleregister">Registra Tus Datos</string>
    <string name="todo">TODO</string>


</resources>